--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.5.0'
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.pnikosis:materialish-progress:1.2'
 }
